# ehr-clinical-data-reconciliation

./: .gitignore  README.md  docker-compose.yml  main.py
backend/: auth.py  database.py  main.py  pyproject.toml  requirements.txt  schema.py  seed.py  seeder.py
backend/alembic/: env.py
backend/alembic/versions/: 00493b5ad351_make_patient_demographics_optional.py  11ebe4a45b49_create_patients_table.py  1d34f4c2f660_added_last_updated_to_patients.py  318e95540de7_connected_vital_signs.py  4ad4b6507ded_create_clinical_tables.py  5df0742688a9_changed_nullable_for_names.py  5f9a49bcd864_fixed_vital_signs_table.py  750a157a1fcf_changed_last_update_for_medication_to_.py  7d3030fa6c00_added_extra_tables_based_on_sample_data.py  8f648fd2a781_add_mrn_to_patient.py  916273cca91e_add_relationship_between_patient_and_.py  990cb00b3168_make_vital_signs_last_updated_nullable.py  c96285d4c21b_create_medications_table.py  e99b889d4a53_create_clinical_tables.py  ea56729bda0b_removed_last_updated_for_lab_results.py
backend/models/: __init__.py  allergies.py  conditions.py  lab_results.py  medication.py  patient.py  vital_signs.py
backend/routers/: allergies.py  conditions.py  labs.py  medication.py  medication_data.py  patient.py  reconcile.py  validate.py  validate_data.py  vital_signs.py
backend/sample_data/reconcile/: case02_dose.json  case03_hospital.json  case04_unsafe.json
backend/sample_data/validate/: case01_happy.json  case02_dose.json  case02_implausible.json  (+2 more)
backend/services/: llm_service.py  record_service.py
backend/tests/: test_reconcile.py  test_validate.py
(+12 files in other folders)
