[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ehr-clinical-data-reconciliation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]",
    "pydantic",
    "openai",
    "python-dotenv",
    "psycopg[binary]",
    "sqlalchemy",
    "alembic",
]

[project.optional-dependencies]
dev = [
    "pytest",
]